frontend/test/should_fail/index_multiple_edge_fromto_argument_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	if{ edgesFromIndexMultipleFromTo(Ei, 42.0, 42).size() > 0; }
	
	modify {
	}
}
